// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarGroup /> should be able to overwrite specific avatar size 1`] = `
<DocumentFragment>
  <div
    aria-label="Avatar group"
    class="inline-flex items-center -space-x-1.5"
    role="group"
  >
    <div
      class="relative inline-flex items-center justify-center rounded-full flex-shrink-0 bg-gray-100 h-8 w-8 ring-2 ring-white"
      data-testid="testid-avatar_children"
    >
      <span
        aria-label="Avatar Icon"
        class="inline-flex text-gray-500 text-xs"
      >
        <svg
          aria-hidden="true"
          class="w-[1em] h-[1em] inline-block leading-[1em] flex-shrink-0 text-current align-middle"
          data-testid="testid-icon"
          focusable="false"
          role="img"
          viewBox="0 0 12 12"
        >
          <path
            d="M6 5c1.1046 0 2-.8954 2-2s-.8954-2-2-2-2 .8954-2 2 .8954 2 2 2zM6 7c-.6566 0-1.3068.1035-1.9134.3045s-1.1578.4956-1.6221.867C1.5268 8.9218 1 9.9392 1 11h10c0-1.0609-.5268-2.0783-1.4645-2.8284C8.5978 7.4214 7.3261 7 6 7z"
            fill="transparent"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
    <div
      class="relative inline-flex items-center justify-center rounded-full flex-shrink-0 bg-gray-100 h-4 w-4 ring-1 ring-white"
      data-testid="testid-avatar_children"
    >
      <span
        aria-label="Avatar Icon"
        class="inline-flex text-gray-500 text-[0.625rem]"
      >
        <svg
          aria-hidden="true"
          class="w-[1em] h-[1em] inline-block leading-[1em] flex-shrink-0 text-current align-middle"
          data-testid="testid-icon"
          focusable="false"
          role="img"
          viewBox="0 0 12 12"
        >
          <path
            d="M6 5c1.1046 0 2-.8954 2-2s-.8954-2-2-2-2 .8954-2 2 .8954 2 2 2zM6 7c-.6566 0-1.3068.1035-1.9134.3045s-1.1578.4956-1.6221.867C1.5268 8.9218 1 9.9392 1 11h10c0-1.0609-.5268-2.0783-1.4645-2.8284C8.5978 7.4214 7.3261 7 6 7z"
            fill="transparent"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AvatarGroup /> should pass the size to all avatars 1`] = `
<DocumentFragment>
  <div
    aria-label="Avatar group"
    class="inline-flex items-center -space-x-1.5"
    role="group"
  >
    <div
      class="relative inline-flex items-center justify-center rounded-full flex-shrink-0 bg-gray-100 h-8 w-8 ring-2 ring-white"
      data-testid="testid-avatar_children"
    >
      <span
        aria-label="Avatar Icon"
        class="inline-flex text-gray-500 text-xs"
      >
        <svg
          aria-hidden="true"
          class="w-[1em] h-[1em] inline-block leading-[1em] flex-shrink-0 text-current align-middle"
          data-testid="testid-icon"
          focusable="false"
          role="img"
          viewBox="0 0 12 12"
        >
          <path
            d="M6 5c1.1046 0 2-.8954 2-2s-.8954-2-2-2-2 .8954-2 2 .8954 2 2 2zM6 7c-.6566 0-1.3068.1035-1.9134.3045s-1.1578.4956-1.6221.867C1.5268 8.9218 1 9.9392 1 11h10c0-1.0609-.5268-2.0783-1.4645-2.8284C8.5978 7.4214 7.3261 7 6 7z"
            fill="transparent"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
    <div
      class="relative inline-flex items-center justify-center rounded-full flex-shrink-0 bg-gray-100 h-8 w-8 ring-2 ring-white"
      data-testid="testid-avatar_children"
    >
      <span
        aria-label="Avatar Icon"
        class="inline-flex text-gray-500 text-xs"
      >
        <svg
          aria-hidden="true"
          class="w-[1em] h-[1em] inline-block leading-[1em] flex-shrink-0 text-current align-middle"
          data-testid="testid-icon"
          focusable="false"
          role="img"
          viewBox="0 0 12 12"
        >
          <path
            d="M6 5c1.1046 0 2-.8954 2-2s-.8954-2-2-2-2 .8954-2 2 .8954 2 2 2zM6 7c-.6566 0-1.3068.1035-1.9134.3045s-1.1578.4956-1.6221.867C1.5268 8.9218 1 9.9392 1 11h10c0-1.0609-.5268-2.0783-1.4645-2.8284C8.5978 7.4214 7.3261 7 6 7z"
            fill="transparent"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AvatarGroup /> should render correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Avatar group"
    class="inline-flex items-center -space-x-1.5"
    role="group"
  >
    <div
      class="relative inline-flex items-center justify-center rounded-full flex-shrink-0 bg-gray-100 h-6 w-6 ring-2 ring-white"
      data-testid="testid-avatar_children"
    >
      <span
        aria-label="Avatar Icon"
        class="inline-flex text-gray-500 text-xs"
      >
        <svg
          aria-hidden="true"
          class="w-[1em] h-[1em] inline-block leading-[1em] flex-shrink-0 text-current align-middle"
          data-testid="testid-icon"
          focusable="false"
          role="img"
          viewBox="0 0 12 12"
        >
          <path
            d="M6 5c1.1046 0 2-.8954 2-2s-.8954-2-2-2-2 .8954-2 2 .8954 2 2 2zM6 7c-.6566 0-1.3068.1035-1.9134.3045s-1.1578.4956-1.6221.867C1.5268 8.9218 1 9.9392 1 11h10c0-1.0609-.5268-2.0783-1.4645-2.8284C8.5978 7.4214 7.3261 7 6 7z"
            fill="transparent"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
    <div
      class="relative inline-flex items-center justify-center rounded-full flex-shrink-0 bg-gray-100 h-6 w-6 ring-2 ring-white"
      data-testid="testid-avatar_children"
    >
      <span
        aria-label="Avatar Icon"
        class="inline-flex text-gray-500 text-xs"
      >
        <svg
          aria-hidden="true"
          class="w-[1em] h-[1em] inline-block leading-[1em] flex-shrink-0 text-current align-middle"
          data-testid="testid-icon"
          focusable="false"
          role="img"
          viewBox="0 0 12 12"
        >
          <path
            d="M6 5c1.1046 0 2-.8954 2-2s-.8954-2-2-2-2 .8954-2 2 .8954 2 2 2zM6 7c-.6566 0-1.3068.1035-1.9134.3045s-1.1578.4956-1.6221.867C1.5268 8.9218 1 9.9392 1 11h10c0-1.0609-.5268-2.0783-1.4645-2.8284C8.5978 7.4214 7.3261 7 6 7z"
            fill="transparent"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
